force-app/main/default/objects/Tally_Allowed_User__mdt/Tally_Allowed_User__mdt.object-meta.xml
<CustomObject>
    <description>Allowed users for the Tally API Integration Data exposing</description>
    <label>Tally Allowed User</label>
    <pluralLabel>Tally Allowed Users</pluralLabel>
</CustomObject>