force-app/main/default/objects/Tally_Allowed_User__mdt/fields/Customer_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Customer_Api_Key__c</fullName>
    <description>Unique secret key for this customer, used when they authenticate via the shared Connected App/credential. TallyInvoiceAPI reads this from the X-Tally-Customer-Key request header and TallyAllowedUserService matches it here to scope results to only this customer&apos;s own invoices, without needing a dedicated Connected App or Run-As User per customer.</description>
    <label>Customer Api Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>