force-app/main/default/objects/Tally_Allowed_User__mdt/fields/Integration_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_User_Id__c</fullName>
    <description>The Salesforce Id of the dedicated Run-As Integration User for this customer&apos;s Connected App. TallyAllowedUserService only returns whitelist rows where this matches the currently running user, so each customer&apos;s own Client Credentials login can only ever unlock their own entry.</description>
    <label>Integration User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>